# genrobot-cli

./: .gitignore  PKG-INFO  pyproject.toml
genrobot/: __main__.py  auth.py  cli.py  config.py  dataset.py  download.py  download_service.py  exit_codes.py  http_client.py  i18n.py  logger.py  utils.py
